# Project-Evolution

./: .gitignore  CMakeLists.txt  README.md  dataFetcher.py  main.cc
Data/: all_companies_historical.csv  all_companies_historical_copy.csv  datasheet.csv  eval_data.csv
brains/: CMakeLists.txt  brainImpl.cc  brainImpl.hpp
dp/: CMakeLists.txt  dataProcessor.cc  dataProcessor.hpp
env/: CMakeLists.txt  environment.cc  environment.hpp
eval/: CMakeLists.txt  evalHandlerImpl.cc  evalHandlerImpl.hpp
handler/: CMakeLists.txt  handler.cc
handler/dh/: dh.cpp  dh.hpp
handler/eh/: eh.cpp  eh.hpp
handler/process/: process.cpp
limbs/: limb1.py  limb10.py  limb2.py  limb3.py  limb4.py  limb5.py  limb6.py
params/: params.hpp
uni/: CMakeLists.txt  universe.cc  universe.hpp
